--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@ p{
     <footer>
         <p>&copy; 2023 Estufas da Natureza. Todos os direitos reservados.</p>
         <div style="color:rgb(241, 236, 236);" class="lista"><ul>
-            <li style="color: rgb(241, 236, 236);"><a href="file:///C:/Users/rgsch/OneDrive/Documentos/trabalhos/PESQ/pesq%20contatos.html">Contato</a></li>
-            <li style="color: rgb(241, 236, 236);"><a href="file:///C:/Users/rgsch/OneDrive/Documentos/trabalhos/PESQ/Termos%20e%20serviços%20pesq.html">Termos de Serviço</a></li>
-            <li style="color: rgb(241, 236, 236);"><a href="file:///C:/Users/rgsch/OneDrive/Documentos/trabalhos/PESQ/Termos%20e%20serviços%20pesq.html">Política de Privacidade</a></li>
+            <li style="color: rgb(241, 236, 236);"><a href="pesqcontatos.html">Contato</a></li>
+            <li style="color: rgb(241, 236, 236);"><a href="Termoseserviçospesq.html">Termos de Serviço</a></li>
+            <li style="color: rgb(241, 236, 236);"><a href="Termoseserviçospesq.html">Política de Privacidade</a></li>
           </ul>
         </div>
     </footer>
