--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@ p{
     <section id="produtos">
         <h2>Nossas Estufas</h2>
         <div class="produto">
-            <img src="estufaft.jpeg" alt="Estufa Modelo A">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpeg" alt="Estufa Modelo A">
             <h3>Estufa Modelo A</h3>
             <p>Ideal para jardins domésticos, a Estufa Modelo A oferece espaço generoso e ventilação ajustável. Proteja suas plantas o ano todo.</p>
         </div>
         <div class="produto">
-            <img src="estufafti.jpeg" alt="Estufa Modelo B">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufafti.jpeg" alt="Estufa Modelo B">
             <h3>Estufa Modelo B</h3>
             <p>A Estufa Modelo B é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
         </div>
 
         <div class="produto">
-            <img src="estufa.jpeg" alt="Estufa Modelo B">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpeg" alt="Estufa Modelo B">
             <h3>Estufa Modelo C</h3>
             <p>A Estufa Modelo C é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
         </div>
