--- a/login.html
+++ b/login.html
@@ -72,6 +72,26 @@
           <input type="password" id="password" name="password" required>
           <input type="submit" value="Login" formaction="index.html">
         </form>
+          <script>
+    var userAgent = navigator.userAgent.toLowerCase();
+
+    if (userAgent.indexOf('chrome') > -1) {
+      // Ações específicas para o Chrome
+      document.body.style.backgroundColor = '';
+    } else if (userAgent.indexOf('firefox') > -1) {
+      // Ações específicas para o Firefox
+      document.body.style.backgroundColor = '';
+    } else if (userAgent.indexOf('safari') > -1) {
+      // Ações específicas para o Safari
+      document.body.style.backgroundColor = '';
+    } else if (userAgent.indexOf('opera') > -1 || userAgent.indexOf('opr') > -1) {
+      // Ações específicas para o Opera
+      document.body.style.backgroundColor = '';
+    } else {
+      // Ações para outros navegadores
+      document.body.style.backgroundColor = 'white';
+    }
+  </script>
       </body>
     </html>
     
