--- a/Termoseserviçospesq.html
+++ b/Termoseserviçospesq.html
@@ -66,7 +66,7 @@
             <li><span style="color: rgb(68, 68, 68);">C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Estufa, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.</span></li></ul>
         <h3><span style="color: rgb(68, 68, 68);">Mais informações</span></h3>
     <p><span style="color: rgb(68, 68, 68);">Esperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo que você não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você usa em nosso site.</span></p>
-    <p><span style="color: rgb(68, 68, 68);">Esta política é efetiva a partir de&nbsp;8 August 2023 17:43</span></p>
+    <p><span style="color: rgb(68, 68, 68);">Esta política é efetiva a partir de&nbsp;8 August 2023 17:43<hr></span></p>
 
 
         <hr><h2><span style="color: rgb(68, 68, 68);">1. Termos</span></h2>
