--- a/Termoseserviçospesq.html
+++ b/Termoseserviçospesq.html
@@ -37,7 +37,7 @@
         }
         .botao-voltar {
           padding: 10px 20px;
-          background-color: #007bff;
+          background-color: #009688;
           color: #fff;
           border: none;
           cursor: pointer;
