--- a/Termoseserviçospesq.html
+++ b/Termoseserviçospesq.html
@@ -15,7 +15,7 @@
           margin-top: 100px;
         }
         header {
-          background-color: #189537;
+          background-color: #4cb852;
           color: #fff;
           padding: 10px;
           text-align: center;
@@ -26,7 +26,7 @@
           padding: 20px;
         }
         footer {
-          background-color: #189537;
+          background-color: #4cb852;
           color: #fff;
           text-align: center;
           padding: 1px; /* Reduzir a altura do footer */
@@ -37,7 +37,7 @@
         }
         .botao-voltar {
           padding: 10px 20px;
-          background-color: #189537;
+          background-color: #4cb852;
           color: #fff;
           border: none;
           cursor: pointer;
@@ -45,7 +45,7 @@
 }
 
 .botao-voltar:hover {
-  background-color: #189537;
+  background-color: #4cb852;
 }
       </style>
 </head>
