--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 }
 
 header {
-    background-color: #4cb852;
+    background-color: #189537;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -65,7 +65,7 @@ section {
 }
 
 footer {
-    background-color: #4cb852;
+    background-color: #189537;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -99,7 +99,7 @@ p{
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #4cb852; /*Cor de fundo*/
+    background-color: #189537; /*Cor de fundo*/
     padding: 10px 0;
     font-size: 10px;
     text-align: left;
