--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ p{
                 <li><a href="#sobre">Sobre Nós</a></li>
                 <li><a href="#produtos">Nossas Estufas</a></li>
                 <li><a href="#criadores">Criadores</a></li>
+                <li><a href="pesqcontatos.html">Contato</a></li>
             </ul>
         </nav>
 
