--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ body {
     color: #333;
     margin-bottom: 30px;
 }
+#Nos, #cria, #estu{
+    text-align: center;
+    background-color: #A36700;
+}
 
 header {
     background-color: #189537;
@@ -231,12 +235,12 @@ p{
     </header>
     
     <section id="sobre">
-        <h2>Sobre Nós</h2>
+        <h2 id="Nos">Sobre Nós</h2>
         <p>A Estufas da Natureza é líder na fabricação e venda de estufas de alta qualidade, projetadas para proteger suas plantas e criar um ambiente ideal para o crescimento saudável. Nosso compromisso é fornecer soluções confiáveis e inovadoras para entusiastas de jardinagem e agricultores.</p>
     </section>
 
     <section id="produtos">
-        <h2>Nossas Estufas</h2>
+        <h2 id="estu">Nossas Estufas</h2>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpeg" alt="Estufa Modelo A">
             <h3>Estufa Modelo A</h3>
@@ -257,7 +261,7 @@ p{
     </section>
 
     <section id="criadores">
-        <h2>Criadores</h2>
+        <h2 id="cria">Criadores</h2>
         <p>A Estufas da Natureza foi fundada por <strong>3° ano</strong>, os responsaveis pela criação do produto foi o <strong>2° ano</strong> e os responsaveis pelo site, as redes sociais e o marketing foi: <strong>Clara Cardoso, Felipe Martini, Rafael Schumacher e Rebeka Galhardo</strong>. Combinando sua paixão pela natureza e habilidades em engenharia, eles criaram uma empresa focada em fornecer soluções de cultivo de alta qualidade.</p>
     </section>
 <script>
