--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 }
 #Nos, #cria, #estu{
     text-align: center;
-    background-color: #A36700;
+    background-color: #ECB351;
 }
 
 header {
