--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ body {
 #Nos, #cria, #estu{
     text-align: center;
     background-color: #ECB351;
+    padding: 20px 0;
+    font-size: 20px;
 }
 
 header {
