--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@ body {
     text-align: center;
     background-color: #ECB351;
     padding: 20px 0;
-    font-size: 20px;
+    font-size: 30px;
+}
+#eoi{
+    font-size: 45px;
 }
 
 header {
@@ -212,7 +215,7 @@ p{
 </style>
 <body>
     <header>
-        <h1>Estufas EOIGESP</h1>
+        <h1 id="eoi">Estufas EOIGESP</h1>
     <div class="navega">
         <nav>
             <ul>
