--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@ h1{
 }
 p{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 22px;
+    font-size: 18px;
+}
+.fut{
+    font-size: 13px;
 }
 
  footer {
@@ -244,14 +247,14 @@ p{
     
     <section id="sobre">
         <h2 id="Nos">Sobre Nós</h2>
-        <br>
+        <br> <br>
         <p>A Estufas da Natureza é líder na fabricação e venda de estufas de alta qualidade, projetadas para proteger suas plantas e criar um ambiente ideal para o crescimento saudável. Nosso compromisso é fornecer soluções confiáveis e inovadoras para entusiastas de jardinagem e agricultores.</p>
     </section>
     <hr>
 
     <section id="produtos">
         <h2 id="estu">Nossas Estufas</h2>
-        <br>
+        <br> <br>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpeg" alt="Estufa Modelo A">
             <h3>Estufa Modelo A</h3>
@@ -274,7 +277,7 @@ p{
 
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
-        <br>
+        <br> <br>
         <p>A Estufas da Natureza foi fundada por <strong>3° ano</strong>, os responsaveis pela criação do produto foi o <strong>2° ano</strong> e os responsaveis pelo site, as redes sociais e o marketing foi: <strong>Clara Cardoso, Felipe Martini, Rafael Schumacher e Rebeka Galhardo</strong>. Combinando sua paixão pela natureza e habilidades em engenharia, eles criaram uma empresa focada em fornecer soluções de cultivo de alta qualidade.</p>
     </section>
 <script>
@@ -297,7 +300,7 @@ p{
       document.body.style.backgroundColor = 'white';
     }
   </script>
-    <footer>
+    <footer class="fut">
         <p>&copy; 2023 Estufas da Natureza. Todos os direitos reservados.</p>
         <div style="color:rgb(241, 236, 236);" class="lista"><ul>
             <li><a href="Termoseserviçospesq.html">Termos de Serviço</a></li>
