--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ p{
     font-size: 18px;
 }
 .fut{
-    font-size: 5px;
+    font-size: 10px;
 }
 
  footer {
@@ -301,7 +301,7 @@ p{
     }
   </script>
     <footer class="fut">
-        <p>&copy; 2023 Estufas da Natureza. Todos os direitos reservados.</p>
+        <p class="fut">&copy; 2023 Estufas da Natureza. Todos os direitos reservados.</p>
         <div style="color:rgb(241, 236, 236);" class="lista"><ul>
             <li><a href="Termoseserviçospesq.html">Termos de Serviço</a></li>
             <li><a href="Termoseserviçospesq.html">Política de Privacidade</a></li>
