--- a/index.html
+++ b/index.html
@@ -286,18 +286,18 @@ p{
         <h2 id="estu">Nossas Estufas</h2>
         <br> <br>
         <div class="produto">
-            <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpeg" alt="Estufa Modelo A">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpg" alt="Estufa Modelo A">
             <h3>Estufa Modelo A</h3>
             <p>Ideal para jardins domésticos, a Estufa Modelo A oferece espaço generoso e ventilação ajustável. Proteja suas plantas o ano todo.</p>
         </div>
         <div class="produto">
-            <img src="https://ghostfacings1171.github.io/eoigesp/estufafti.jpeg" alt="Estufa Modelo B">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpg" alt="Estufa Modelo B">
             <h3>Estufa Modelo B</h3>
             <p>A Estufa Modelo B é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
         </div>
 
         <div class="produto">
-            <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpeg" alt="Estufa Modelo B">
+            <img src="https://ghostfacings1171.github.io/eoigesp/estufafti.jpg" alt="Estufa Modelo B">
             <h3>Estufa Modelo C</h3>
             <p>A Estufa Modelo C é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
         </div>
