--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@ body {
 #eoi{
     font-size: 30px;
 }
+img{
+    max-width: 50%;
+    height: auto;
+}
 
 header {
     background-color: #189537;
