--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ body {
     font-size: 30px;
 }
 img{
-    width: 50%;
+    width: 45%;
     height: auto;
+    display: block;
     margin: 0 auto;
 }
 
