--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@ body {
 #eoi{
     font-size: 30px;
 }
-img{
-    width: 45%;
+
+.produto img {
+    max-width: 100%;
+    height: auto;
+    
+}
+
+
+img {
+    width: 40%;
     height: auto;
     display: block;
     margin: 0 auto;
 }
+
 
 header {
     background-color: #189537;
