--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@ body {
 #eoi{
     font-size: 30px;
 }
+    
+.produto {
+    margin-bottom: 40px; /* Adicione margem na parte inferior do elemento .produto */
+    text-align: center; /* Centralize o texto horizontalmente */
+}
+
+.produto img {
+    width: 40%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.produto h3 {
+    margin-top: 10px; /* Adicione margem acima do título para separá-lo da imagem */
+}
+
+.produto p {
+    margin-top: 10px; /* Adicione margem acima do parágrafo para separá-lo da imagem */
+}
+
 
 .produto img {
     max-width: 100%;
