--- a/pesqcontatos.html
+++ b/pesqcontatos.html
@@ -114,15 +114,17 @@
     <p>
       Se preferir, preencha o formulário abaixo e entraremos em contato com você:
     </p>
-    <form action="enviar_email.php" method="post">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
-      <input type="submit" value="Enviar">
-    </form>
+    <form action="https://formspree.io/f/xoqokoaw" method="POST">
+  <!-- Seus campos de formulário aqui -->
+  <label for="nome">Nome:</label>
+  <input type="text" id="nome" name="nome" required>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+  <label for="mensagem">Mensagem:</label>
+  <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+  <input type="submit" value="Enviar">
+</form>
+
 
     <!-- Botão "Contatar" para enviar o formulário -->
     <button class="btn-aceitar" onclick="contatar()">Contatar</button>
