--- a/pesqcontatos.html
+++ b/pesqcontatos.html
@@ -114,8 +114,12 @@
     <p>
       Se preferir, preencha o formulário abaixo e entraremos em contato com você:
     </p>
-    <form action="https://formspree.io/f/xoqokoaw" method="POST">
-  <!-- Seus campos de formulário aqui -->
+
+
+    
+    <form
+  action="https://formspree.io/f/xoqokoaw"
+  method="POST">
   <label for="nome">Nome:</label>
   <input type="text" id="nome" name="nome" required>
   <label for="email">Email:</label>
@@ -124,6 +128,8 @@
   <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
   <input type="submit" value="Enviar">
 </form>
+
+
 
 
     <!-- Botão "Contatar" para enviar o formulário -->
