--- a/pesqcontatos.html
+++ b/pesqcontatos.html
@@ -105,9 +105,9 @@
       Para obter mais informações sobre nossos produtos e fazer um pedido, entre em contato conosco:
     </p>
     <ul>
-      <li>Email: contato@empresaestufas.com</li>
-      <li>Telefone: (11) 1234-5678</li>
-      <li>Endereço: Rua das Estufas, 123 - Cidade, Estado</li>
+      <li>Email: eoigesp@gmail.com</li>
+      <li>Telefone: (11) 12345-6789</li>
+      <li>Endereço da sede: R. Fidêncio Ramos,308- Vila Olimpia</li>
     </ul>
 
     <h3>Formulário de Contato</h3>
