--- a/index.html
+++ b/index.html
@@ -340,7 +340,11 @@ p{
         <!-- Adicione mais produtos aqui, se necessário -->
     </section>
         <hr>
-
+        <h2>Vídeo sobre a EÓIGESP</h2>
+            <video width="320" height="240" controls>
+              <source src="EOI-video.mp4" type="video/mp4">
+            </video>
+        <hr>
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
         <br> <br>
