--- a/index.html
+++ b/index.html
@@ -259,10 +259,19 @@ video{
     display: flex;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
-    min-height: 100vh; /* Garante que o vídeo fique centralizado na tela inteira */
 }
 #vidio{
     text-align: center;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column; /* Para centralizar verticalmente o vídeo e o título */
 }
 
 
