--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@ p{
 }
 
 video{
-    margin: 0;
-    padding: 0;
-    display: flex;
+    display: block;
+    margin: 0 auto;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
 }
