--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 }
 #Nos, #cria, #estu{
     text-align: center;
-    background-color: #ECB351;
+    background-color: #7F4529;
     padding: 10px 0;
     font-size: 28px;
     margin: 0;
@@ -356,7 +356,7 @@ video{
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
         <br> <br>
-        <p>A Estufas da Natureza foi fundada por <strong>3° ano</strong>, os responsaveis pela criação do produto foi o <strong>2° ano</strong> e os responsaveis pelo site, as redes sociais e o marketing foi: <strong>Clara Cardoso, Felipe Martini, Rafael Schumacher e Rebeka Galhardo</strong>. Combinando sua paixão pela natureza e habilidades em engenharia, eles criaram uma empresa focada em fornecer soluções de cultivo de alta qualidade.</p>
+        <p>A Estufas da EÓIGESP foi fundada por <strong>Ana Luísa, Beatriz Colombo, Davi Luiz, Felipe Gutierrez, Heitor Barbosa e Lucas Antonio.</strong>, os responsaveis pela criação do produto foi o <strong>2° ano</strong> e os responsaveis pelo site, as redes sociais e o marketing foi: <strong>Clara Cardoso, Felipe de Martini, Rafael Schumacher e Rebeka Galhardo</strong>. Combinando sua paixão pela natureza e habilidades em engenharia, eles criaram uma empresa focada em fornecer soluções de cultivo de alta qualidade.</p>
     </section>
 <script>
     var userAgent = navigator.userAgent.toLowerCase();
