--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 }
 #Nos, #cria, #estu{
     text-align: center;
-    background-color: #AB5D39;
+    background-color: #C79033;
     padding: 10px 0;
     font-size: 28px;
     margin: 0;
