--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: #F6F1F1;
+}
 
 .lista {
     list-style: none;
