--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@ video{
         <br> <br>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpg" alt="Estufa Modelo A">
-            <h3>Estufa Modelo A</h3>
-            <p>Ideal para jardins domésticos, a Estufa Modelo A oferece espaço generoso e ventilação ajustável. Proteja suas plantas o ano todo.</p>
+            <h3>Sobre as Estufas</h3>
+            <p>As Estufas Orgânicas Inteligentes Autossustentáveis da EÓIGESP são uma solução inovadora para a produção de alimentos saudáveis e sustentáveis. Com tecnologia de ponta e um sistema de irrigação inteligente, essas estufas são capazes de produzir alimentos frescos e saudáveis em um espaço reduzido. </p>
         </div>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpg" alt="Estufa Modelo B">
