--- a/index.html
+++ b/index.html
@@ -339,8 +339,10 @@ video{
         </div>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufaft.jpg" alt="Estufa Modelo B">
-            <h3>Estufa Modelo B</h3>
-            <p>A Estufa Modelo B é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
+            <h3>Produtividade, Sustentabilidade e Qualidade</h3>
+            <p>As estufas produzem até 100 vezes mais alimentos do que as estufas tradicionais, utilizando apenas uma fração da água e dos recursos naturais. Isso é possível graças ao sistema de irrigação inteligente, que utiliza água de reúso e sensores para monitorar a umidade do solo.</p>
+<br>
+<p>Os alimentos produzidos nas estufas são orgânicos e saudáveis, pois são cultivados sem o uso de agrotóxicos ou fertilizantes químicos.</p>
         </div>
 
         <div class="produto">
