--- a/index.html
+++ b/index.html
@@ -347,8 +347,10 @@ video{
 
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufafti.jpg" alt="Estufa Modelo B">
-            <h3>Estufa Modelo C</h3>
-            <p>A Estufa Modelo C é perfeita para agricultura em larga escala. Sua estrutura robusta e design funcional a tornam uma escolha inteligente.</p>
+            <h3>Sustentabilidade</h3>
+            <p>As estufas são autossustentáveis, utilizando apenas uma fração da água e dos recursos naturais.</p>
+            <br>
+<p>As estufas são construídas em módulos verticais, o que permite produzir uma grande quantidade de alimentos em um espaço reduzido..</p>
         </div>
         <!-- Adicione mais produtos aqui, se necessário -->
     </section>
