--- a/index.html
+++ b/index.html
@@ -301,31 +301,22 @@ video{
         <br> <br>
         <p> Na EÓIGESP, acreditamos que o futuro deve ser não apenas sustentável, mas também alimentado. Somos uma empresa dedicada a transformar essa visão em realidade, atuando no coração da agricultura ecológica para criar um impacto duradouro no meio ambiente e nas comunidades brasileiras. Nossa jornada é alimentada por paixão, inovação e um compromisso inabalável com a preservação do planeta e a erradicação da fome.</p>
 <br> <br>
-<h3>Nossa Missão</h3>
+<h3>🎯 Nossa Missão 🎯</h3>
 
 <p>Na EÓIGESP, nossa missão é clara e ambiciosa: alimentar o mundo de maneira sustentável, promovendo a conservação do meio ambiente e melhorando a qualidade de vida das comunidades locais. Estamos empenhados em eliminar a fome e a insegurança alimentar no Brasil, enquanto contribuímos para a construção de um futuro mais verde e próspero.</p>
 <br> <br>
-<h3>Estufas Autossustentáveis - Nosso Coração Verde</h3>
+<h3>💚 Estufas Autossustentáveis - Nosso Coração Verde 💚</h3>
 
 <p>Nossas estufas autossustentáveis são o centro de nossa abordagem inovadora. Elas representam a síntese perfeita entre tecnologia e natureza, permitindo-nos cultivar uma grande variedade de alimentos de maneira eficiente, mesmo em condições climáticas adversas. Utilizamos energia eólica para alimentar nossos sistemas, minimizando o impacto ambiental e reduzindo drasticamente nossa pegada de carbono.</p>
 <br> <br>
-<h3>Preservação Ambiental - Nossa Responsabilidade</h3>
+<h3>🌲 Preservação Ambiental - Nossa Responsabilidade 🌲</h3>
 
 <p>Na EÓIGESP, a preservação do meio ambiente é uma prioridade inegociável. Nossas práticas agrícolas sustentáveis visam regenerar o solo, conservar a água e proteger a biodiversidade. Estamos comprometidos em reduzir o desperdício de recursos naturais e em promover a agricultura regenerativa como parte de nosso compromisso contínuo com a Terra.
 <br> <br>
-<h3>Comunidades Fortalecidas - Nosso Compromisso Social</h3>
+<h3>🤝 Comunidades Fortalecidas - Nosso Compromisso Social 🤝</h3>
 
 <p>Não somos apenas uma empresa agrícola; somos uma família que se preocupa profundamente com as comunidades ao nosso redor. Colaboramos com líderes locais e organizações sem fins lucrativos para capacitar as pessoas, fornecer treinamento agrícola e oportunidades de emprego, e, o mais importante, garantir que nenhuma pessoa em nossa região de atuação passe fome. Juntos, estamos construindo um futuro mais brilhante e igualitário.</p>
 <br> <br>
-<h3>Transparência e Responsabilidade - Nossos Valores Fundamentais</h3>
-
-<p>Na EÓIGESP, operamos com total transparência e responsabilidade. Estamos empenhados em manter os mais altos padrões éticos e garantir que todas as nossas ações estejam alinhadas com nossos valores. Queremos ser um exemplo de excelência em agricultura sustentável e responsável, e convidamos você a fazer parte dessa jornada conosco.</p>
-<br> <br>
-<h3>Junte-se a Nós na Missão por um Futuro Sustentável e Alimentado</h3>
-
-<p>A EÓIGESP convida você a se juntar a nós em nossa missão por um futuro mais sustentável e alimentado. Seja você um cliente, parceiro, colaborador ou membro da comunidade, seu apoio é fundamental para alcançarmos nossos objetivos e criar um mundo onde a fome seja apenas uma memória do passado.</p>
-<br> <br>
-<p>Obrigado por compartilhar essa jornada conosco. Juntos, podemos alimentar o mundo de maneira sustentável e construir um futuro mais brilhante para todos.</p>
     </section>
     <hr>
 
