--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@ footer {
  }
 
 h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 30px;
 }
 
 h1{
