--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ video{
     <hr>
 
     <section id="produtos">
-        <h2 id="estu">Nossas Estufas</h2>
+        <h2 id="estu">🎋 Nossas Estufas 🎋</h2>
         <br> <br>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpg" alt="Estufa Modelo A">
@@ -347,7 +347,7 @@ video{
         <!-- Adicione mais produtos aqui, se necessário -->
     </section>
         <hr>
-         <h2 id="Nos">Vídeo sobre a EÓIGESP</h2>
+         <h2 id="Nos">📽️ Vídeo sobre a EÓIGESP 📽️</h2>
             <video width="667" height="500" controls>
               <source src="EOI-video.mp4" type="video/mp4">
             </video>
