--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ video{
     <hr>
 
     <section id="produtos">
-        <h2 id="estu">🎋 Nossas Estufas 🎋</h2>
+        <h2 id="estu"> Nossas Estufas </h2>
         <br> <br>
         <div class="produto">
             <img src="https://ghostfacings1171.github.io/eoigesp/estufa.jpg" alt="Estufa Modelo A">
