--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ img {
     height: auto;
     display: block;
     margin: 0 auto;
+    border-color: rgb(47, 255, 0);
+    border-style: outset;
 }
 
 
@@ -262,6 +264,8 @@ video{
     margin: 0 auto;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
+    border-color: rgb(47, 255, 0);
+    border-style: outset;
 }
 #vidio{
     text-align: center;
