--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ img {
     border-color: rgb(47, 255, 0);
     border-style: outset;
     border-radius: 15px;
+    border: 15px;
 }
 
 
@@ -267,6 +268,8 @@ video{
     align-items: center; /* Centraliza verticalmente */
     border-color: rgb(47, 255, 0);
     border-style: outset;
+    border-radius: 15px;
+    border: 15px;
 }
 #vidio{
     text-align: center;
