--- a/pesqcontatos.html
+++ b/pesqcontatos.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="logopesq.png"sizes="10x10">
   <title>Contatos</title>
   <style>
     /* Estilos básicos para melhorar a aparência */
