--- a/index.html
+++ b/index.html
@@ -356,9 +356,7 @@ video{
     </section>
         <hr>
          <h2 id="Nos">📽️ Vídeo sobre a EÓIGESP 📽️</h2>
-            <video width="667" height="500" controls>
-              <source src="EOI-video.mp4" type="video/mp4">
-            </video>
+           <iframe width="674" height="379" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
