--- a/index.html
+++ b/index.html
@@ -274,6 +274,14 @@ video{
 #vidio{
     text-align: center;
 }
+iframe{
+    display: block;
+    margin: 0 auto;
+    border-color: rgb(47, 255, 0);
+    border-style: outset;
+    border-radius: 15px;
+    border: 20px;
+}
 
 
 /* Estilos adicionais podem ser adicionados conforme necessário */
