--- a/index.html
+++ b/index.html
@@ -274,9 +274,11 @@ video{
 #vidio{
     text-align: center;
 }
-iframe{
-    display: block;
-    margin: 0 auto;
+.asd {
+    display: nome;
+    background: black;
+    border: none;
+    align: center;
     border-color: rgb(47, 255, 0);
     border-style: outset;
     border-radius: 15px;
@@ -364,7 +366,7 @@ iframe{
     </section>
         <hr>
          <h2 id="Nos">📽️ Vídeo sobre a EÓIGESP 📽️</h2>
-           <iframe width="674" height="379" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe class="asd" align="top" width="674" height="379" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
