--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@ video{
     border-style: outset;
     border-radius: 15px;
     border: 20px;
+    width: 40%;
+    height: auto;
+    padding: 5px;
 }
 
 
@@ -366,7 +369,7 @@ video{
     </section>
         <hr>
          <h2 id="Nos">📽️ Vídeo sobre a EÓIGESP 📽️</h2>
-           <iframe class="asd" align="top" width="674" height="379" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe class="asd" align="top" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
