--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@ video{
     border-style: outset;
     border-radius: 15px;
     border: 20px;
-    width: 40%;
-    height: auto;
-    padding: 5px;
+    width: 60%;
+    height: 60%;
+    padding: 10px;
 }
 
 
