--- a/index.html
+++ b/index.html
@@ -275,17 +275,10 @@ video{
     text-align: center;
 }
 .asd {
-    display: nome;
-    background: black;
-    border: none;
-    align: center;
     border-color: rgb(47, 255, 0);
     border-style: outset;
     border-radius: 15px;
     border: 20px;
-    width: 40%;
-    height: 60%;
-    padding: 10px;
 }
 
 
@@ -369,7 +362,7 @@ video{
     </section>
         <hr>
          <h2 id="Nos">📽️ Vídeo sobre a EÓIGESP 📽️</h2>
-           <iframe class="asd" align="top" src="https://www.youtube.com/embed/krZCHUqZPm4" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe id="asd" width="600" height="300" src="https://www.youtube.com/embed/krZCHUqZPm4" title="🦁" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>
     <section id="criadores">
         <h2 id="cria">Criadores</h2>
